Cambios prof en los masajes + boton subir + whtsapp en las 4 solapas

--- a/contact.html
+++ b/contact.html
@@ -18,26 +18,13 @@ published: true
 
         <p class="block-author">{{ site.company_name }}</p>
         <p>{{ site.address_line }}</p>
-        <p>Horario: Lunes a Sábados de 10 a 20 hs.</p>
+        <p>Horario de atención: lunes a sábados, de 10:00 a 21:00 hs (incluye feriados).</p>
         <p>Celular: {{ site.telephone_number }}</p>
         <!-- <p>Fax: {{ site.fax_number }}</p> !-->
 
-        <em class="block-author">Email: {{ site.company_email }}</em> <br>
+        <em class="block-author">¿Querés trabajar con nosotros? Envianos tu CV a: {{ site.company_email }}</em> <br>
         <br>
-        <!-- p class="lead">Social Link</p><hr>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-          <a href="#"><img src="assets/img/social-icons/btn_skype.png" alt="Skype"></a>
-          Call us
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-          <a href="#"><img src="assets/img/social-icons/btn_facebook.png" alt="Facebook"></a>
-          Like us
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-12">
-          <a href="#"><img src="assets/img/social-icons/btn_twitter.png" alt="Twitter"></a>
-          Follow us
-        </div>
-        <br !-->
+        
       </div>
       <div class="col-lg-8">
         <div class="feedback-form">
